white space html fix

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,6 +1,7 @@
 html, body
     margin: 0
     padding: 0
+    border: 0
     width: 100%
 
 header 
@@ -99,11 +100,11 @@ nav ul li a
     opacity: .7
     border: 2px solid #0b530b
 
-.work a, .posts a
+.work a, .posts a, .team-btn a
     text-decoration: none
     color: #fff
 
-.work span, .post-btn span, .more-btn span
+.work span, .post-btn span, .more-btn span, .team-btn span
     display: block
     width: 90%
     text-align: center
@@ -389,7 +390,7 @@ nav ul li a
 
 .team
     width: 100%
-    height: 900px
+    height: 1000px
     background: #54d154
 
 .team-members
@@ -447,7 +448,7 @@ nav ul li a
     border-radius: 50%
 
 .member
-    width: 19%
+    width: 20%
     text-align: center
     display: inline-block
 
@@ -485,6 +486,27 @@ nav ul li a
     width: 26px
     height: 26px
     display: inline-block
+
+.post-team
+    width: 100%
+    height: 200px
+    background: #3eba3e
+    overflow: auto
+
+.team-btn
+    width: 250px
+    height: 50px
+    background: #54d154
+    color: #fff
+    border: 2px solid transparent
+    border-radius: 25px
+    -webkit-box-shadow: 0px 5px 15px 0px #38a838;
+    -moz-box-shadow: 0px 5px 15px 0px #38a838;
+    box-shadow: 0px 5px 15px 0px #38a838;
+    margin: 75px auto
+    position: relative
+    cursor: pointer
+    transition: .5s
 
 @media (max-width: 1550px)
     .author
